--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.TPIngSoftware"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.view.RegisterActivity"
             android:exported="false" />
         <activity
