--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore'
 
+    //Circular Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
