--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
+    id("kotlin-parcelize")
 }
 
 android {
@@ -85,5 +86,11 @@ dependencies {
 
     //Circular Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
 }
