--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.TPIngSoftware"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.view.HomeActivity"
             android:exported="false" />
         <activity
