--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.8'
+
 }
