--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,16 +18,13 @@
         android:theme="@style/Theme.TPIngSoftware"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.RequestsReceivedActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.view.EditMyServiceActivity"
             android:exported="false" />
         <activity
             android:name=".ui.view.DetailServiceActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.view.DetailsServiceActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.view.AddAvailabilityActivity"
             android:exported="false" />
         <activity
             android:name=".ui.view.AddServiceActivity"
